@@ -4,5 +4,4 @@ parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.basicskin [test]
-
+eggs = zope.app.basicskin
