@@ -52,7 +52,6 @@ setup(name='zope.app.basicskin',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
       namespace_packages=['zope', 'zope.app'],
-      extras_require = dict(test=['zope.app.testing']),
       install_requires=['setuptools',
                         'zope.component',
                         'zope.interface',
